--- a/listadoPacientes.html
+++ b/listadoPacientes.html
@@ -30,7 +30,7 @@
     <section>
         <h2>Registro de pacientes</h2>
 
-        <table id="listadoMedicos">            
+        <table id="listadoPacientes">            
             <thead>
                 <tr>
                     <th>Nombre del paciente</th>
@@ -39,11 +39,12 @@
                     <th>Edad</th>
                     <th>Telefono</th>
                     <th>Especialidad Requerida</th>
+                    <th>Medico</th>
                                     
                 </tr>
             </thead>
             <tbody>
-                <!-- Se complementa de manera dinamica -->
+                
             </tbody>
         </table>
 
@@ -54,6 +55,7 @@
     <div>
         <input type="button" class="boton" id="botonVolver" value="Volver">
     </div>
+    <script src="./JS/cookiesPacientes.js"></script>
     <script src="./JS/volver.js"></script>
 </body>
 </html>
