--- a/registroMedico.html
+++ b/registroMedico.html
@@ -30,7 +30,7 @@
     <section>
         <h2>Registro de medico</h2>
 
-        <form action="">
+        <form id="registroMedicosForm" action="">
             <fieldset>
                 <legend>Diligencie todos los datos solicitados</legend>
 
@@ -50,16 +50,16 @@
                 </div>
 
                 <div>
-                    <label for="especialidad">Especialidad </label>
-                    <select id="especialidad" name="especialidad" required>                       
+                    <label for="especialidadRequerida">Especialidad </label>
+                    <select id="especialidadRequerida" name="especialidadRequerida" required>                       
                         <option value="Medicina general">Medicina general</option>
-                        <option value="Medicina interna">Cardiologia</option>
-                        <option value="Medicina veterinaria preventiva">Medicina Interna</option>
-                        <option value="Dermatología veterinaria">Dermatología</option>
-                        <option value="Cirugía veterinaria">Rehabilitación física</option>
-                        <option value="Veterinaria conductual">Psicología</option>
-                        <option value="Odontología veterinaria">Odontología</option>
-                        <option value="Farmacología veterinaria">Radiologia</option>
+                        <option value="Cardiologia">Cardiologia</option>
+                        <option value="Medicina Interna">Medicina Interna</option>
+                        <option value="Dermatología">Dermatología</option>
+                        <option value="Rehabilitación física">Rehabilitación física</option>
+                        <option value="Psicología">Psicología</option>
+                        <option value="Odontología">Odontología</option>
+                        <option value="Radiologia">Radiologia</option>
                     </select>
                 </div>
 
@@ -85,6 +85,8 @@
     <div>
         <input type="button" class="boton" id="botonVolver" value="Volver">
     </div>
+    
+    <script src="./JS/guardarMedicos.js"></script>
     <script src="./JS/volver.js"></script>
 </body>
 </html>
