Ajuste guardado de cookies

--- a/registroMedico.html
+++ b/registroMedico.html
@@ -50,8 +50,8 @@
                 </div>
 
                 <div>
-                    <label for="especialidadRequerida">Especialidad </label>
-                    <select id="especialidadRequerida" name="especialidadRequerida" required>                       
+                    <label for="especialidadMedico">Especialidad </label>
+                    <select id="especialidadMedico" name="especialidadMedico" required>                       
                         <option value="Medicina general">Medicina general</option>
                         <option value="Cardiologia">Cardiologia</option>
                         <option value="Medicina Interna">Medicina Interna</option>
